--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "mind-search-today",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "node-static": "^0.7.11"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rolschner/mind-search-today.git"
-  },
-  "author": "Rhett Olschner",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rolschner/mind-search-today/issues"
-  },
-  "homepage": "https://github.com/rolschner/mind-search-today#readme"
+	"name": "mind-search-today",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"dependencies": {
+		"ejs": "^2.7.1",
+		"express": "^4.17.1",
+		"mongoose": "^5.7.3",
+		"node-static": "^0.7.11"
+	},
+	"devDependencies": {},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node app.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/rolschner/mind-search-today.git"
+	},
+	"author": "Rhett Olschner",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/rolschner/mind-search-today/issues"
+	},
+	"homepage": "https://github.com/rolschner/mind-search-today#readme"
 }
