--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
 	"dependencies": {
 		"ejs": "^2.7.1",
 		"express": "^4.17.1",
+		"express-session": "^1.17.0",
+		"google-libphonenumber": "^3.2.6",
 		"mongoose": "^5.7.3",
-		"node-static": "^0.7.11"
+		"node-static": "^0.7.11",
+		"passport": "^0.4.0",
+		"passport-local": "^1.0.0",
+		"passport-local-mongoose": "^5.0.1"
 	},
 	"devDependencies": {},
 	"scripts": {
